<resources>
    <string name="app_name">Flashcard</string>

    <!-- Login page resources -->
    <string name="logo">logo</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Enter your email address</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="show_password_label">Show Password</string>
    <string name="login_btn_label">Login</string>
    <string name="signup_link_label">New to app? Create an account</string>

    <!-- Sign up page resources -->
    <string name="signup_btn_label">Sign up</string>
    <string name="login_link_label">Already have an account? Login</string>
    <string name="username">Username</string>
    <string name="username_hint">Enter your username</string>

    <!-- Home page resources -->
    <string name="home_h1">Your Learning Journey Starts Here!</string>
    <string name="home_description_1">It looks a little empty...</string>
    <string name="home_description_2">Create your first flashcard and unlock a smarter way to learn.</string>
    <string name="edit_flashcard">Edit Flashcard</string>
</resources>