<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.authentication.SignupActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <!-- Email -->
    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/email_label"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/tv_text_size" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_layout_height"
        android:layout_marginBottom="10dp"
        android:background="@color/input_field"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/et_text_size" />

    <!-- Username -->
    <TextView
        android:id="@+id/username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/username"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/tv_text_size" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_layout_height"
        android:layout_marginBottom="10dp"
        android:background="@color/input_field"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/et_text_size" />

    <!-- Password -->
    <TextView
        android:id="@+id/password_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/password_label"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/tv_text_size" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_layout_height"
        android:background="@color/input_field"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/et_text_size" />

    <CheckBox
        android:id="@+id/show_password_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password_label"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primary_text_color"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_layout_height"
        android:layout_marginBottom="10dp"
        android:background="@color/login_btn_color"
        android:text="@string/signup_btn_label"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size"
        />

    <Button
        android:id="@+id/signup_link"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signup_link_layout_height"
        android:background="@color/white"
        android:text="@string/login_link_label"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/btn_text_size"
        />
</LinearLayout>