<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.main.HomeActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="12dp">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:id="@+id/new_flashcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_icon"
            android:background="@null"
            android:layout_gravity="center_vertical"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ViewSwitcher
        android:id="@+id/home_view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/flashcard_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="364dp"
                android:layout_height="316dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/home_logo"
                android:layout_weight="1"
                android:contentDescription="@string/logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_h1"
                    android:textSize="24sp"
                    android:textColor="#FB8C00"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_description_1"
                    android:textSize="@dimen/tv_text_size"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_description_2"
                    android:textSize="@dimen/tv_text_size"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="15dp"/>

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flashcard_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </ViewSwitcher>


</LinearLayout>